--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           class="text-center p-4"
           style="background-color: rgba(0, 0, 0, 0.2)"
         >
-          © <script type="text/javascript">document.write( new Date().getFullYear() ) Copyright: Surya MK
+          © 2024 Copyright: Surya MK
         </div>
       </footer>
     </div>
